discussion/kv_engine/125919/125919_rev11_discussion.txt
======================================================================================================================
DESCRIPTION:

Change compaction to use the PiTR configuration

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-21 07:04:10.000000000
Message: 
Uploaded patch set 11: Patch Set 10 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-21 07:23:51.000000000
Message: 
Patch Set 11: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27640/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1110): error C2660: "cb::couchstore::compact": function does not take 8 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27640/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1810/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1119:17: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
                oldest.count(),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1810/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1119:17:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1810/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23638/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1119:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3227/ : FAILURE

Compile error at [2020-04-21T07:15:08.910Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1120:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3227/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3305/ : FAILURE

Compile error at [2020-04-21T07:19:59.850Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1120:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3305/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3244/ : FAILURE

Compile error at [2020-04-21T07:16:44.000Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1120:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3244/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2289/ : FAILURE

Compile error at [2020-04-21T07:14:47.882Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1119:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2289/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11095/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/329/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
